# agp-api

./: .gitignore  .readthedocs.yml  pylintrc  pyproject.toml
.github/: settings.yml
.github/workflows/: tests.yml
agp_api/: pyproject.toml
agp_api/docs/source/: agp_api.agent.rst  agp_api.gateway.rst  agp_api.route.rst  agp_api.rst  conf.py  index.rst  modules.rst
agp_api/src/agp_api/exception/: session_creation.py
agp_api/src/agp_api/gateway/: data_plane.py  gateway_container.py
agp_api/src/agp_api/route/: route_info.py  route_manager.py
agp_api/src/agp_api/session/: session_api.py  session_config.py  session_manager.py  session_type.py
agp_api/tests/: docker_container.py  fast_api_app.py  payload.py  test_fire_forget.py  test_gateway_container.py  test_gateway_integration.py  test_http_reinjection.py  test_route_manager.py
