[project]
name = "agp-api"
version = "0.0.3"
description = ""
authors = [
    {name = "brisacoder",email = "dev@brisa.ai"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (==0.115.11)",
    "agp-bindings (==0.1.10)",
    "python-dotenv (==1.0.1)",
    "pydantic (==2.10.6)",
]

[tool.poetry]
packages = [{include = "agp_api", from = "src"}]

[tool.poetry.dependencies]
sphinx = "^7.0"
sphinx-rtd-theme = "^1.2"
sphinx-pydantic = "^2.2.0"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme", "autodoc_pydantic"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
